[package]
name = "notionfs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
clap = { version = "4.4.0", features = ["derive", "env"] }
const_format = "0.2.31"
dotenv = { version = "0.15.0" }
env_logger = "0.10.0"
log = "0.4.20"
reqwest = { version = "*", features = [
    "json",
    "rustls-tls",
], default-features = false }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
tokio = { version = "1.32.0", features = ["full"] }
toml = "0.7.6"
