[package]
name = "notionfs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
clap = { version = "4.4.0", features = ["derive", "env"] }
dotenv = { version = "0.15.0" }
env_logger = "0.10.0"
futures = "0.3.28"
log = "0.4.20"
mime_guess = "2.0.4"
reqwest = { version = "0.11.20", features = ["json", "rustls-tls", "stream", "gzip"], default-features = false }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
tokio = { version = "1.32.0", features = ["full"] }
tokio-util = { version = "0.7.8", features = ["full"] }
toml = "0.7.6"
