[workspace]
members = [".", "notionfs"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
anyhow = "1"
async-stream = "0.3.5"
bytes = "1.5.0"
clap = "4.4.0"
dotenv = "0.15.0"
env_logger = "0.10.0"
futures = "0.3.28"
indicatif = "0.17.6"
log = "0.4.20"
mime_guess = "2.0.4"
reqwest = { version = "0.11.20", default-features = false }
serde = "1"
serde_json = "1"
tokio = "1"
tokio-util = "0.7.8"
toml = "0.7.6"
uuid = "1.4.1"

[package]
name = "yukumo"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = { workspace = true, features = ["backtrace"] }
async-stream = { workspace = true }
bytes = { workspace = true }
chrono = { version = "0.4.31", features = ["serde"] }
clap = { workspace = true, features = ["derive"] }
env_logger = { workspace = true }
futures = { workspace = true }
home = "0.5.5"
indicatif = { workspace = true }
log = { workspace = true }
notionfs = { path = "./notionfs" }
serde = { workspace = true, features = ["derive"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "chrono", "postgres"] }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true, features = ["full"] }
toml = { workspace = true }
