[package]
name = "notionfs"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
mime_guess = { workspace = true }
reqwest = { workspace = true, features = [
    "json",
    "rustls-tls",
    "stream",
    "gzip",
] }
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0.105"
tokio = { workspace = true, features = ["fs"] }
uuid = { workspace = true, features = ["v4", "fast-rng"] }

[dev-dependencies]
anyhow = { workspace = true, features = ["backtrace"] }
async-stream = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
dotenv = { workspace = true }
env_logger = { workspace = true }
futures = { workspace = true }
indicatif = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true, features = ["full"] }
